--- a/app/templates/verify_account.html
+++ b/app/templates/verify_account.html
@@ -1,11 +1,11 @@
-<p>Dear {{ user.username }},</p>
+<p>Dear {{ username }},</p>
 <p>
     To verify your account
-    <a href="{{ url_for('customer_account_verification', token=token, _external=True) }}">
+    <a href="{{ url }}">
         click here
     </a>.
 </p>
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('customer_account_verification', token=token, _external=True) }}</p>
+<p>{{ url }}</p>
 <p>Sincerely,</p>
 <p>The Flask Team</p>
